[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Actors/Weapons/Projectiles/laser_shot.res" type="SpriteFrames" id=1]
[ext_resource path="res://src/Actors/Weapons/Projectiles/laser_beam.res" type="SpriteFrames" id=2]
[ext_resource path="res://src/Actors/NewStateMachine/audioplayer.gd" type="Script" id=3]
[ext_resource path="res://src/Sounds/LASER_BEAM_MIX.wav" type="AudioStream" id=4]
[ext_resource path="res://src/Actors/Player/BossWeapons/SqueezeBomb/SqueezeBomb.gd" type="Script" id=5]
[ext_resource path="res://src/Sounds/Rooster - Explosion.ogg" type="AudioStream" id=6]
[ext_resource path="res://src/Actors/Props/RideArmor/RepeatAnimation.gd" type="Script" id=7]
[ext_resource path="res://src/Levels/Primrose/rotation_disabler.gd" type="Script" id=8]
[ext_resource path="res://src/Effects/Materials/mat_ridearmor.tres" type="Material" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 351.5, 17 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 30 )

[node name="Laser Buster" type="KinematicBody2D" groups=["Player Projectile"]]
z_index = 4
collision_layer = 4
collision_mask = 0
script = ExtResource( 5 )
damage = 2.0
damage_to_weakness = 10.0
time_off_screen = 2.0
break_guards = true
duration = 1.5
move_speed = 0.0
endanim_name = "end"
deflectable = false
flash_duration = 0.1
foward_start = 48.0

[node name="animatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "loop"
frame = 3
playing = true

[node name="line" type="AnimatedSprite" parent="animatedSprite"]
material = ExtResource( 9 )
position = Vector2( 352.5, 16 )
scale = Vector2( 19.5313, 1 )
frames = ExtResource( 2 )
animation = "loop"
frame = 4
playing = true
offset = Vector2( 0, -15 )
script = ExtResource( 7 )
reference = NodePath("..")

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.500001, -1.90735e-06 )
scale = Vector2( 2.65, 2.5 )

[node name="collisionShape2D" type="CollisionShape2D" parent="." groups=["Player Projectile"]]
position = Vector2( 313.5, 0 )
shape = SubResource( 1 )

[node name="disabler" type="Node" parent="."]
script = ExtResource( 8 )
fade_out = true
delete_after_fade = true
undo_on_rotation_end = false

[node name="point" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
volume_db = -9.109
bus = "SFX"

[node name="sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -12.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 3 )

[node name="collisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
